--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,38 @@
-asgiref==3.9.2
-cfgv==3.4.0
-click==8.3.0
+asgiref==3.11.0
+cfgv==3.5.0
+click==8.3.1
 colorama==0.4.6
 crispy-bootstrap5==2025.6
 cssbeautifier==1.15.4
 distlib==0.4.0
-Django==5.2.6
-django-auditlog==3.2.1
-django-bootstrap5==25.2
-django-debug-toolbar==6.0.0
-django-tables2==2.7.5
+django==6.0
+django-auditlog==3.4.1
+django-bootstrap5==25.3
+django-crispy-forms==2.5
+django-debug-toolbar==6.1.0
+django-tables2==2.8.0
 djlint==1.36.4
-EditorConfig==0.17.1
-filelock==3.19.1
-identify==2.6.14
+editorconfig==0.17.1
+et-xmlfile==2.0.0
+filelock==3.20.1
+identify==2.6.15
 jsbeautifier==1.15.4
 json5==0.12.1
 nodeenv==1.9.1
+numpy==2.3.5
+openpyxl==3.1.5
+pandas==2.3.3
 pathspec==0.12.1
-platformdirs==4.4.0
-pre_commit==4.3.0
+platformdirs==4.5.1
+pre-commit==4.5.1
 python-dateutil==2.9.0.post0
-PyYAML==6.0.3
-regex==2025.9.18
-ruff==0.13.2
+pytz==2025.2
+pyyaml==6.0.3
+regex==2025.11.3
+ruff==0.14.9
 six==1.17.0
-sqlparse==0.5.3
+sqlparse==0.5.4
 tqdm==4.67.1
-virtualenv==20.34.0
+tzdata==2025.3
+virtualenv==20.35.4
 whitenoise==6.11.0
