--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
 -   repo: https://github.com/Riverside-Healthcare/djLint
     rev: v1.19.15
     hooks:
-    -   id: djlint-jinja
+    -   id: djlint-django
         files: \.html
         types_or:
         - html
