--- a/requirements.txt
+++ b/requirements.txt
@@ -2,37 +2,36 @@ asgiref==3.11.0
 cfgv==3.5.0
 click==8.3.1
 colorama==0.4.6
-crispy-bootstrap5==2025.6
 cssbeautifier==1.15.4
 distlib==0.4.0
-django==6.0
+Django==6.0.1
 django-auditlog==3.4.1
-django-bootstrap5==25.3
+django-bootstrap5==26.1
 django-crispy-forms==2.5
-django-debug-toolbar==6.1.0
+django-debug-toolbar==6.2.0
 django-tables2==2.8.0
 djlint==1.36.4
-editorconfig==0.17.1
-et-xmlfile==2.0.0
-filelock==3.20.1
-identify==2.6.15
+EditorConfig==0.17.1
+et_xmlfile==2.0.0
+filelock==3.20.3
+identify==2.6.16
 jsbeautifier==1.15.4
-json5==0.12.1
-nodeenv==1.9.1
-numpy==2.3.5
+json5==0.13.0
+nodeenv==1.10.0
+numpy==2.4.1
 openpyxl==3.1.5
 pandas==2.3.3
-pathspec==0.12.1
+pathspec==1.0.3
 platformdirs==4.5.1
-pre-commit==4.5.1
+pre_commit==4.5.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
-pyyaml==6.0.3
-regex==2025.11.3
-ruff==0.14.9
+PyYAML==6.0.3
+regex==2026.1.15
+ruff==0.14.13
 six==1.17.0
-sqlparse==0.5.4
+sqlparse==0.5.5
 tqdm==4.67.1
 tzdata==2025.3
-virtualenv==20.35.4
+virtualenv==20.36.1
 whitenoise==6.11.0
