--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,14 @@ click==8.3.1
 colorama==0.4.6
 cssbeautifier==1.15.4
 distlib==0.4.0
-Django==6.0.1
+django==6.0.1
 django-auditlog==3.4.1
 django-bootstrap5==26.1
-django-crispy-forms==2.5
 django-debug-toolbar==6.2.0
 django-tables2==2.8.0
 djlint==1.36.4
-EditorConfig==0.17.1
-et_xmlfile==2.0.0
+editorconfig==0.17.1
+et-xmlfile==2.0.0
 filelock==3.20.3
 identify==2.6.16
 jsbeautifier==1.15.4
@@ -20,18 +19,21 @@ json5==0.13.0
 nodeenv==1.10.0
 numpy==2.4.1
 openpyxl==3.1.5
-pandas==2.3.3
+pandas==3.0.0
 pathspec==1.0.3
 platformdirs==4.5.1
-pre_commit==4.5.1
+pre-commit==4.5.1
+psycopg==3.3.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
-PyYAML==6.0.3
+pyyaml==6.0.3
 regex==2026.1.15
 ruff==0.14.13
 six==1.17.0
 sqlparse==0.5.5
 tqdm==4.67.1
+typing-extensions==4.15.0
 tzdata==2025.3
 virtualenv==20.36.1
 whitenoise==6.11.0
