--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,45 @@
-asgiref==3.11.0
+asgiref==3.11.1
 cfgv==3.5.0
 click==8.3.1
 colorama==0.4.6
 cssbeautifier==1.15.4
 distlib==0.4.0
-django==6.0.1
+django==6.0.2
 django-auditlog==3.4.1
-django-bootstrap5==26.1
+django-bootstrap5==26.2
 django-debug-toolbar==6.2.0
 django-tables2==2.8.0
 djlint==1.36.4
 editorconfig==0.17.1
 et-xmlfile==2.0.0
-filelock==3.20.3
+filelock==3.24.0
+gunicorn==25.1.0
 identify==2.6.16
+iniconfig==2.3.0
 jsbeautifier==1.15.4
 json5==0.13.0
 nodeenv==1.10.0
-numpy==2.4.1
+numpy==2.4.2
 openpyxl==3.1.5
+packaging==26.0
 pandas==3.0.0
-pathspec==1.0.3
-platformdirs==4.5.1
+pathspec==1.0.4
+platformdirs==4.9.1
+pluggy==1.6.0
 pre-commit==4.5.1
 psycopg==3.3.2
+pygments==2.19.2
+pytest==9.0.2
+pytest-django==4.12.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
 pyyaml==6.0.3
 regex==2026.1.15
-ruff==0.14.13
+ruff==0.15.1
 six==1.17.0
 sqlparse==0.5.5
-tqdm==4.67.1
+tqdm==4.67.3
 typing-extensions==4.15.0
 tzdata==2025.3
 virtualenv==20.36.1
